# git-shade

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  git-shade.rb  gitshade.rb  release.sh
Formula/: git-shade.rb
docs/: IMPLEMENTATION_STATUS.md  PLAN.md  PRD.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  guide.rs  init.rs  mod.rs  pull.rs  push.rs  status.rs
src/core/: config.rs  conflict.rs  mod.rs  paths.rs  sync.rs  tracker.rs
src/git/: exclude.rs  mod.rs
src/utils/: fs.rs  mod.rs  project.rs
tests/: README.md  integration_test.rs
tests/common/: mod.rs
