[package]
name = "git-shade"
description = "CLI tool that maintains a single unified Git repository for all your project's excluded files (configs, secrets, large files)"
license = "MIT"
authors = ["sergiorivas"]
version = "1.0.12"
edition = "2021"

[lib]
name = "git_shade"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dialoguer = "0.11"
walkdir = "2.5"
fs_extra = "1.3"
dirs = "5.0"
hostname = "0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.10"
